output do build finalizado com exito

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 .vscode
 __pycache__/
 discord.log
+sigtomcat/sig/sig.rar
+sigtomcat/sig/sig.war
+sigtomcat/sigpwebfuncoes/Funcao-v.2023.02.09-15-02-2023.rar
+sigtomcat/sigpwebfuncoes/sigpwebfuncoes.war
+config/client_secret.json
