--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,6 @@ __pycache__/
 discord.log
 sigtomcat/sig/sig.rar
 sigtomcat/sig/sig.war
-sigtomcat/sigpwebfuncoes/Funcao-v.2023.02.09-15-02-2023.rar
+sigtomcat/sigpwebfuncoes/Funcao*
 sigtomcat/sigpwebfuncoes/sigpwebfuncoes.war
-config/client_secret.json
+resource/client_secret.json
