Adicionando testes unitarios e estrutura de novas implementações de git create branch e git pull requeste

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DIRETORIO_PROJETO = "/opt/docker/repo/sig"
-DIRETORIO_SIG = "/opt/docker/repo/sig/sig"
-DIRETORIO_FUNCOES = "/opt/docker/repo/sig/sigpwebfuncoes"
+DIRETORIO_ROOT_SIG = "/opt/docker/repo/sig/sig"
+DIRETORIO_ROOT_FUNCOES = "/opt/docker/repo/sig/sigpwebfuncoes"
 ARQUIVO_SIG = "/opt/docker/repo/sig/sig/build/libs"
 ARQUIVO_FUNCOES = "/opt/docker/repo/sig/sigpwebfuncoes/build/libs"
 CAMINHO_PROPERTIES = "/opt/docker/repo/conexao/SigpConexao.properties"
