--- a/sigtomcat/sig/Dockerfile
+++ b/sigtomcat/sig/Dockerfile
@@ -1,8 +1,5 @@
 # Pull base image
-From tomcat:8-jre8
-
-# Maintainer
-MAINTAINER <"Pablo Sores">
+FROM tomcat:8-jre8
 
 # Copy to images tomcat path
 ADD sig.war /usr/local/tomcat/webapps/
