finalizando correções de bugs

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 DIRETORIO_PROJETO = "/opt/docker/repo/sig"
 DIRETORIO_ROOT_SIG = "/opt/docker/repo/sig/sig"
 DIRETORIO_ROOT_FUNCOES = "/opt/docker/repo/sig/sigpwebfuncoes"
-ARQUIVO_SIG = "/opt/docker/repo/sig/sig/build/libs"
-ARQUIVO_FUNCOES = "/opt/docker/repo/sig/sigpwebfuncoes/build/libs"
-CAMINHO_PROPERTIES = "/opt/docker/repo/conexao/SigpConexao.properties"
-CAMINHO_PROPERTIES_SIG = "/WEB-INF/classes/arquitetura/db/SigpConexao.properties"
-CAMINHO_PROPERTIES_FUNCOES = "/WEB-INF/classes/servico/comun/SigpConexao.properties"
+ARQUIVO_SIG_WAR = "/opt/docker/repo/sig/sig/build/libs"
+ARQUIVO_FUNCOES_WAR = "/opt/docker/repo/sig/sigpwebfuncoes/build/libs"
+CAMINHO_PROPERTIES_TEMPLATE = "/opt/docker/repo/conexao/SigpConexao.properties"
+CAMINHO_PROPERTIES_SIG_WAR = "/WEB-INF/classes/arquitetura/db/SigpConexao.properties"
+CAMINHO_PROPERTIES_FUNCOES_WAR = "/WEB-INF/classes/servico/comun/SigpConexao.properties"
