--- a/sigtomcat/sigpwebfuncoes/SigpConexao.properties
+++ b/sigtomcat/sigpwebfuncoes/SigpConexao.properties
@@ -1,9 +1,14 @@
 driverClassName=org.postgresql.Driver
 
+!= SERVIDOR LOCAL -- PABLO
+url=jdbc:postgresql://172.17.0.1:5432/sch
+
 != SERVIDOR AWS -- Marcelo
 !url=jdbc:postgresql://54.243.118.222:5443/sch_angra
 
 != SERVIDOR AWS -- Geral
+!url=jdbc:postgresql://44.194.239.249:5432/sch_angra
+
 !url=jdbc:postgresql://44.194.239.249:5432/sch_angra
 
 !-SERVIDOR 28 IP INTERNO ********************************************************
@@ -60,7 +65,7 @@ driverClassName=org.postgresql.Driver
 !url=jdbc:postgresql://172.16.30.9:5432/sch_trindade
 !url=jdbc:postgresql://172.16.30.9:5432/sch_formosa
 !url=jdbc:postgresql://172.16.30.9:5434/sch_cubatao
-url=jdbc:postgresql://172.16.30.9:5434/sch_angra
+!url=jdbc:postgresql://172.16.30.9:5434/sch_angra
 !url=jdbc:postgresql://172.16.30.9:5434/sch_montesanto
 !url=jdbc:postgresql://172.16.30.9:5432/sch_morrinhos
 !url=jdbc:postgresql://172.16.30.9:5432/sch_carmo_rioverde
@@ -127,16 +132,16 @@ url=jdbc:postgresql://172.16.30.9:5434/sch_angra
 !password=palmas#prodata
 
 !servidor 29
+# username=postgres
+# password=prodata
+# usernameReport=postgres
+# passwordReport=prodata
+
+!local
 username=postgres
 password=prodata
 usernameReport=postgres
 passwordReport=prodata
-
-!local
-# username=postgres
-# password=postgres
-# usernameReport=postgres
-# passwordReport=postgres
 
 !servidor teste CAMPINAS
 !username=postgres
