--- a/.env
+++ b/.env
@@ -1,10 +1,14 @@
-DIRETORIO_PROJETO = "/opt/docker/repo/sig"
-DIRETORIO_ROOT_SIG = "/opt/docker/repo/sig/sig"
-DIRETORIO_ROOT_FUNCOES = "/opt/docker/repo/sig/sigpwebfuncoes"
-ARQUIVO_SIG_WAR = "/opt/docker/repo/sig/sig/build/libs"
-ARQUIVO_FUNCOES_WAR = "/opt/docker/repo/sig/sigpwebfuncoes/build/libs"
-CAMINHO_PROPERTIES_TEMPLATE = "/opt/docker/repo/conexao/SigpConexao.properties"
+DIRETORIO_PROJETO = "/repo/sig"
+DIRETORIO_ROOT_SIG = "/repo/sig/sig"
+DIRETORIO_ROOT_FUNCOES = "/repo/sig/sigpwebfuncoes"
+DIRETORIO_SIG_WAR = "/repo/sig/sig/build/libs"
+DIRETORIO_FUNCOES_WAR = "/repo/sig/sigpwebfuncoes/build/libs"
+ARQUIVO_SIG_WAR = "/repo/sig/sig/build/libs/sig.war"
+ARQUIVO_FUNCOES_WAR = "/repo/sig/sigpwebfuncoes/build/libs/sigpwebfuncoes.war"
+CAMINHO_PROPERTIES_TEMPLATE = "/repo/conexao/SigpConexao.properties"
 CAMINHO_PROPERTIES_SIG_WAR = "/WEB-INF/classes/arquitetura/db/SigpConexao.properties"
 CAMINHO_PROPERTIES_FUNCOES_WAR = "/WEB-INF/classes/servico/comun/SigpConexao.properties"
 CAMINHO_DISPONIBILIZAR_PADRAO_RAR = "/repo/disponibilizar_arquivos/arquivos_build/"
 CAMINHO_DISPONIBILIZAR_VERSOES_AUTO_RAR = "/repo/disponibilizar_arquivos/arquivos_build/versoes_geradas_auto"
+CAMINHO_CRIAR_CONTAINER_SIG = "/opt/docker/repo/prodatinha/sigtomcat/sig/"
+CAMINHO_CRIAR_CONTAINER_FUNCOES = "/opt/docker/repo/prodatinha/sigtomcat/sigpwebfuncoes/"
