adicionando dependencia pyright

--- a/.env
+++ b/.env
@@ -6,9 +6,10 @@ DIRETORIO_FUNCOES_WAR = "/repo/sig/sigpwebfuncoes/build/libs"
 ARQUIVO_SIG_WAR = "/repo/sig/sig/build/libs/sig.war"
 ARQUIVO_FUNCOES_WAR = "/repo/sig/sigpwebfuncoes/build/libs/sigpwebfuncoes.war"
 CAMINHO_PROPERTIES_TEMPLATE = "/repo/conexao/SigpConexao.properties"
+CAMINHO_PROPERTIES_TEMPLATE_GERADA = "/repo/prodatinha/conexao/SigpConexao.properties"
 CAMINHO_PROPERTIES_SIG_WAR = "/WEB-INF/classes/arquitetura/db/SigpConexao.properties"
 CAMINHO_PROPERTIES_FUNCOES_WAR = "/WEB-INF/classes/servico/comun/SigpConexao.properties"
 CAMINHO_DISPONIBILIZAR_PADRAO_RAR = "/repo/disponibilizar_arquivos/arquivos_build/"
 CAMINHO_DISPONIBILIZAR_VERSOES_AUTO_RAR = "/repo/disponibilizar_arquivos/arquivos_build/versoes_geradas_auto"
-CAMINHO_CRIAR_CONTAINER_SIG = "/opt/docker/repo/prodatinha/sigtomcat/sig/"
-CAMINHO_CRIAR_CONTAINER_FUNCOES = "/opt/docker/repo/prodatinha/sigtomcat/sigpwebfuncoes/"
+CAMINHO_CRIAR_CONTAINER_SIG = "/repo/prodatinha/sigtomcat/sig/"
+CAMINHO_CRIAR_CONTAINER_FUNCOES = "/repo/prodatinha/sigtomcat/sigpwebfuncoes/"
