--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -6,7 +6,7 @@
     "exclude": ["**/__pycache__/*"],
     "pythonPath": ["."],
     "typeCheckingMode": "off",
-    "extraPaths": ["./img"],
+    "extraPaths": ["./img", "./config"],
     "executionEnvironments": [
       {
         "root": "./",
