--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
     "prefix": "!",
-    "token": "MTExNDE2NjgzMTgwOTMxNDg2Ng.GcvwbT.vXo2Zl2Ds2ZbPRw3imgKZx132Kpk4IXCTrKjp4",
+    "token": "",
     "permissions": "8",
-    "application_id": "1114166831809314866",
+    "application_id": "",
     "sync_commands_globally": true,
     "owners": [
       123456789,
